# api/swagger/swagger.yaml
@@ -1,12 +1,11 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: MX100 API
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
 basePath: /
-# 
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -18,17 +17,56 @@ consumes:
 produces:
   - application/json
 paths:
+  /accounts:
+    x-swagger-router-controller: accounts
+    post:
+      operationId: login
+      description: Gets the token by login
+      parameters:
+        - name: account
+          description: Login properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Account"
+      tags:
+        - Accounts
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/LoginResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /jobs:
     x-swagger-router-controller: jobs
     get:
       operationId: getAll
       description: Returns a list of jobs
+      parameters:
+      - name: Authorization
+        in: header
+        description: JWT Authorization Header
+        required: true
+        type: string
+      security:
+        - Bearer: []
+      x-security-scopes:
+        - Administrator
+        - Employer
+        - Freelancer
       # define the type of response for Success "200" and Error
       responses:
         "200":
           description: Success
           schema:
             $ref: "#/definitions/GetJobsListResponse"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
         default:
           description: Error
           schema:
@@ -44,6 +82,16 @@ paths:
           required: true
           schema:
             $ref: "#/definitions/Job"
+        - name: Authorization
+          in: header
+          description: JWT Authorization Header
+          required: true
+          type: string
+      security:
+        - Bearer: []
+      x-security-scopes:
+        - Administrator
+        - Employer
       responses:
         "200":
           description: Success
@@ -82,6 +130,18 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  Account:
+    type: object
+    properties:
+      email:
+        type: string
+        description: user email
+      password:
+        type: string
+        description: user password
+    required:
+      - email
+      - password
   Job:
     type: object
     properties:
@@ -109,6 +169,14 @@ definitions:
     required:
       - id
       - message
+  LoginResponse:
+    type: object
+    properties:
+      token:
+        type: string
+        description: a generated JWT token
+    required:
+      - token
   GeneralResponse:
     type: object
     properties:
@@ -151,3 +219,14 @@ definitions:
     properties:
       message:
         type: string
+securityDefinitions:
+  Bearer:
+    type: apiKey
+    name: Authorization
+    in: header
+    description:
+     For accessing the API a valid JWT token must be passed in all the queries in
+     the 'Authorization' header.
+
+     A valid JWT token is generated by the API and retourned as answer of a call
+     to the route /login giving a valid user & password.
